include bin file just in case

--- a/js/decision-forest-demo/index.html
+++ b/js/decision-forest-demo/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Decision Forest Demo</title>
-    <link id="model" href="model.json" />
+    <link id="model" href="tfjs_model/model.json" />
   </head>
 
   <body>
