--- a/js/decision-forest-demo-WORKING/index.html
+++ b/js/decision-forest-demo-WORKING/index.html
@@ -13,7 +13,7 @@
       <p>
         For more info:
         <a
-          href="https://github.com/hchiam/learning-tf/tree/main/js/decision-forest-demo-WORKING"
+          href="https://github.com/hchiam/learning-tf/tree/main/js/decision-forest-demo-WORKING#my-working-demo-of-running-a-tensorflow-decision-forest-model-with-tensorflowjs"
           target="_blank"
           >https://github.com/hchiam/learning-tf/tree/main/js/decision-forest-demo-WORKING</a
         >
