move files for mobilenet demo

--- a/js/mobilenet-image-prediction/index.html
+++ b/js/mobilenet-image-prediction/index.html
@@ -14,7 +14,7 @@
         background: lightgreen;
       }
       pre:empty {
-        background: lightyellow;
+        background: pink;
       }
       pre:empty:has(+ img[src^="blob"]):before {
         content: "Predicting image...";
